# model-forge

./: .gitignore  .pre-commit-config.yaml  BROWSER_PILOT_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  EXAMPLE_CODE_REVIEW.md  MANIFEST.in  PROMPT_CODE_REVIEW.md  PUBLISHING.md  README.md  design.md  github_copilot_connection.py  modelforge.sh  pyproject.toml  release-strategy.md  requirements.md  setup.sh  tasks.md
.github/workflows/: ci.yml  release.yml
docs/: BROWSER_PILOT_INTEGRATION.md  README.md  RELEASE_NOTES_v2.3.0.md  v2.0-refactoring-summary.md  v2.0-release-notes.md  v2.1-release-notes.md  v2.2-release-notes.md
examples/: browser_pilot_integration.py  enhanced_metadata_demo.py
scripts/: test_github_copilot.py
specs/baseline/: design.md  requirements.md  tasks.md
specs/bug-fixes/models-info-json-decode-error/: design.md  requirements.md  tasks.md
specs/bug-fixes/models-list-empty-descriptions/: design.md  requirements.md  tasks.md
specs/bug-fixes/token-counting-and-cost-tracking/: design.md  requirements.md  tasks.md
specs/cli-refactor/: design.md  requirements.md  tasks.md
specs/enhancements/distribution-packaging/: design.md  requirements.md  tasks.md
specs/enhancements/error-handling-improvements/: design.md  requirements.md  tasks.md
specs/enhancements/modelsdev-integration/: design.md  requirements.md  tasks.md
specs/enhancements/uv-migration/: design.md  requirements.md  tasks.md
specs/error-handling-improvements/: requirements.md
specs/features/llm-usage-tracking/: design.md  requirements.md  tasks.md
specs/nodejs-port/: design.md  requirements.md  tasks.md
specs/refactoring/simplification-phase1/: design.md  requirements.md  tasks.md
specs/security-credentials-refactor/: design.md  requirements.md  tasks.md
specs/testing-improvements/: design.md  requirements.md  tasks.md
specs/type-safety-refactor/: design.md  requirements.md  tasks.md
specs/v2.1/: README.md
specs/v2.1/config-improvements/: design.md  requirements.md  tasks.md
specs/v2.1/opentelemetry-integration/: design.md  requirements.md  tasks.md
specs/v2.1/provider-enhancements/: design.md  requirements.md  tasks.md
specs/v2.1/testing-enhancements/: design.md  requirements.md  tasks.md
src/modelforge/: __init__.py  auth.py  cli.py  cli_utils.py  config.py  enhanced_llm.py  error_handler.py  exceptions.py  logging_config.py  modelsdev.py  registry.py  retry.py  streaming.py  telemetry.py  validation.py  wizard.py
test_env/: pyvenv.cfg
tests/: conftest.py  test_auth.py  test_auth_comprehensive.py  test_auth_env_vars.py  test_cli.py  test_cli_auth.py  test_cli_io_simple.py  test_cli_utils.py  test_config.py  test_enhanced_llm.py  test_error_handler.py  test_exceptions.py  test_migration.py  test_modelsdev.py  test_modelsdev_descriptions.py  test_registry.py  test_retry.py  test_streaming_simple.py  test_telemetry.py  test_validation.py  test_wizard.py
